--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\JavaFX\\javafx-sdk-23.0.2\\lib\\javafx.base.jar",
-        "c:\\JavaFX\\javafx-sdk-23.0.2\\lib\\javafx.controls.jar",
-        "c:\\JavaFX\\javafx-sdk-23.0.2\\lib\\javafx.fxml.jar",
-        "c:\\JavaFX\\javafx-sdk-23.0.2\\lib\\javafx.graphics.jar",
-        "c:\\JavaFX\\javafx-sdk-23.0.2\\lib\\javafx.media.jar",
-        "c:\\JavaFX\\javafx-sdk-23.0.2\\lib\\javafx.swing.jar",
-        "c:\\JavaFX\\javafx-sdk-23.0.2\\lib\\javafx.web.jar",
-        "c:\\JavaFX\\javafx-sdk-23.0.2\\lib\\javafx-swt.jar"
+        "/Users/sareemmomin/Documents/TAMU/CSCE331/javafx-sdk-23.0.2/lib/javafx.base.jar",
+        "/Users/sareemmomin/Documents/TAMU/CSCE331/javafx-sdk-23.0.2/lib/javafx.controls.jar",
+        "/Users/sareemmomin/Documents/TAMU/CSCE331/javafx-sdk-23.0.2/lib/javafx.fxml.jar",
+        "/Users/sareemmomin/Documents/TAMU/CSCE331/javafx-sdk-23.0.2/lib/javafx.graphics.jar",
+        "/Users/sareemmomin/Documents/TAMU/CSCE331/javafx-sdk-23.0.2/lib/javafx.media.jar",
+        "/Users/sareemmomin/Documents/TAMU/CSCE331/javafx-sdk-23.0.2/lib/javafx.swing.jar",
+        "/Users/sareemmomin/Documents/TAMU/CSCE331/javafx-sdk-23.0.2/lib/javafx.web.jar",
+        "/Users/sareemmomin/Documents/TAMU/CSCE331/javafx-sdk-23.0.2/lib/javafx-swt.jar"
     ]
 }
